[metadata]
name = fhir-helpers
description = FHIR Helpers
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
author = Anthem Inc
keywords =
    FHIR

[options]
packages = find:
package_dir = =src
python_requires = >= 3.8, < 3.10
install_requires =
    python-dateutil~=2.8
    fhir-types~=0.2.3
    google-fhir~=0.7.1

[options.packages.find]
where = src

[options.package_data]
fhir_helpers =
    py.typed
